Changes in 23.08
    * Support for 23.08 NPU components and dependencies (core-driver, core-platform, Vela 3.9.0, CMSIS, CMSIS-NN and TensorFlow Lite Micro).
    * Update Python package requirements for compatibility reasons.

Changes in 23.05
    * Support for 23.05 NPU components and dependencies (core-driver, core-platform, Vela 3.8.0, CMSIS, CMSIS-NN and TensorFlow Lite Micro).
    * Minor updates to CMSIS-pack dependencies.
    * Update Python package requirements for compatibility reasons.
    * Increase minimum requirements of Python to 3.9

Changes in 23.02
    * Support for 23.02 NPU components and dependencies (core-driver, core-platform, Vela 3.7.0, CMSIS, CMSIS-DSP, CMSIS-NN and TensorFlow Lite Micro).
    * Improvement to PMU counters - reducing cache maintenance burden for Arm Cortex-M55 CPUs when NPU is used.
    * Inclusive language updates.
    * Documentation updates including adding links to AN555 resources.
    * Updates to Python requirements file for virtual environment.

Changes in 22.11
    * Support for 22.11 NPU components and dependencies (core-driver, core-platform, Vela 3.6.0, CMSIS, TensorFlow Lite Micro)
    * CMSIS-NN is added as a new dependency due to it moving out of the core CMSIS repository.
    * Updates for Arm® Corstone™-310 platform.
    * Formal support for CMake presets.
    * Support for the new Arm Compiler 6.19
    * Published CMSIS-Pack under `resources` and related updates.
    * Bug fix for building with NPU disabled.

Changes in 22.08
    * Support for 22.08 NPU component and dependencies (core-driver, core-platform, Vela 3.5.0, CMSIS, TensorFlow Lite Micro).
    * Formal support for Arm® Corstone-310 Arm Virtual Hardware and FPGA implementations.
    * Added CMake presets.
    * Bug fix for Arm® Ethos-U65 NPU's default AXI burst length.
    * Provision to allow platform-agnostic use case API to be packaged as CMSIS pack.
    * Documentation updates.

Changes in 22.05