@@ -29,13 +29,14 @@ set(CMAKE_SYSTEM_NAME               Generic)
 set(CMAKE_C_COMPILER_WORKS          1)
 set(CMAKE_CXX_COMPILER_WORKS        1)
 
+set(MIN_ARM_CLANG_VERSION       6.19)
+
 if (NOT DEFINED CMAKE_SYSTEM_PROCESSOR AND NOT DEFINED CMAKE_SYSTEM_ARCH)
     set(CMAKE_SYSTEM_PROCESSOR      cortex-m55 CACHE STRING "Cortex-M CPU to use")
 endif()
 
 if (CMAKE_SYSTEM_PROCESSOR STREQUAL cortex-m55)
     # Flags for cortex-m55
-    set(MIN_ARM_CLANG_VERSION       6.16)
     set(CPU_ID                      M55)
     set(CPU_COMPILE_DEF             CPU_CORTEX_${CPU_ID})
     set(ARM_CPU                     "ARMC${CPU_ID}")
@@ -45,7 +46,6 @@ if (CMAKE_SYSTEM_PROCESSOR STREQUAL cortex-m55)
     set(CPU_LINK_OPT                "--cpu=Cortex-${CPU_ID}")
 elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL cortex-m85)
     # Flags for cortex-m85
-    set(MIN_ARM_CLANG_VERSION       6.18)
     set(CPU_ID                      M85)
     set(CPU_COMPILE_DEF             CPU_CORTEX_${CPU_ID})
     set(ARM_CPU                     "ARMC${CPU_ID}")
@@ -55,7 +55,6 @@ elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL cortex-m85)
     set(CPU_LINK_OPT                "--cpu=Cortex-${CPU_ID}")
 elseif (CMAKE_SYSTEM_ARCH STREQUAL armv8.1-m.main)
     # Flags for generic armv8.1-m profile
-    set(MIN_ARM_CLANG_VERSION       6.16)
     set(CPU_ID                      ARMv81MML_DSP_DP_MVE_FP)
     set(ARM_CPU                     "ARMv81MML")
     set(CPU_COMPILE_DEF             ${CPU_ID})
@@ -68,10 +67,6 @@ elseif (CMAKE_SYSTEM_ARCH STREQUAL armv8.1-m.main)
     set(CPU_LINK_OPT                "--cpu=8.1-M.Main.mve.fp")
 elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL cortex-m33)
     # Flags for cortex-m33 to go here
-endif()
-
-if (NOT DEFINED MIN_ARM_CLANG_VERSION)
-    set(MIN_ARM_CLANG_VERSION       6.16)
 endif()
 
 set(${CPU_COMPILE_DEF}              1)
